--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://tsarkashrk.github.io/Kiramu/",
   "scripts": {
     "dev": "vite --port 3000",
     "build": "vite build",
