added some changes

--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ VITE_ANILIBRIA_API=https://api.anilibria.tv/v3/
 VITE_ANILIBRIA_URL=https://anilibria.tv/
 VITE_LITELIBRIA_POSTERS_API=https://api.litelibria.com/posters/
 VITE_SHIKIMORI_API=https://shikimori.one/api/
+
+VITE_SERVER_URL=https://kiramu-server.vercel.app/
+VITE_SERVER_URL_LOGIN=https://kiramu-server.vercel.app/auth/login
+VITE_SERVER_URL_REGISTER=https://kiramu-server.vercel.app/auth/register
+VITE_SERVER_URL_PROFILE=https://kiramu-server.vercel.app/profile
