--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ VITE_ANILIBRIA_API=https://api.anilibria.tv/v3/
 VITE_ANILIBRIA_URL=https://anilibria.tv/
 VITE_LITELIBRIA_POSTERS_API=https://api.litelibria.com/posters/
 VITE_SHIKIMORI_API=https://shikimori.one/api/
+
+VITE_SERVER_URL=http://localhost:1000/
+VITE_SERVER_PROFILE_URL=http://localhost:1000/profile
+VITE_SERVER_LOGIN_URL=http://localhost:1000/auth/login
+VITE_SERVER_REGISTER_URL=http://localhost:1000/auth/register
