--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,10 +1,8 @@
 {
   "version": 2,
-  "build": [
-    {
-      "src": "*.js",
-      "use": "@vercel/node"
-    }
-  ],
+  "build": {
+    "src": "*.js",
+    "use": "@vercel/node"
+  },
   "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
