--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "server.js", "use": "@vercel/node" }
+    { "src": "index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "handle": "vercel", "src": "/(.*)", "dest": "/server.js" }
+    { "handle": "vercel", "src": "/(.*)", "dest": "/index.js" }
   ]
 }
