--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,32 +1,24 @@
 {
   "routes": [
     {
-      "src": "/api/auth/register",
-      "dest": "https://kiramu.vercel.app/api/auth/register"
+      "src": "/auth/register",
+      "dest": "https://kiramu-anime.vercel.app/auth/register"
     },
     {
-      "src": "/api/auth/login",
-      "dest": "https://kiramu.vercel.app/api/auth/login"
+      "src": "/auth/login",
+      "dest": "https://kiramu-anime.vercel.app/auth/login"
     },
     {
-      "src": "/api/anime/:animeCode/comments",
-      "dest": "https://kiramu.vercel.app/api/anime/:animeCode/comments"
+      "src": "/anime/:animeCode/",
+      "dest": "https://kiramu-anime.vercel.app/anime/:animeCode/"
     },
     {
-      "src": "/api/profile",
-      "dest": "https://kiramu.vercel.app/api/profile"
+      "src": "/profile",
+      "dest": "https://kiramu-anime.vercel.app/profile"
     },
     {
-      "src": "/api/profile/favorites",
-      "dest": "https://kiramu.vercel.app/api/profile/favorites"
-    },
-    {
-      "src": "/api/anime/:animeCode/check",
-      "dest": "https://kiramu.vercel.app/api/anime/:animeCode/check"
-    },
-    {
-      "src": "/api/anime/:animeCode",
-      "dest": "https://kiramu.vercel.app/api/anime/:animeCode"
+      "src": "/profile/favorites",
+      "dest": "https://kiramu-anime.vercel.app/profile/favorites"
     }
   ]
 }
